# vdiff

./: .gitignore  CHANGELOG.md  pyproject.toml  vdiff.py  vdiff.tcss
src/vdiff/: vdiff.py
