[project]
name = "vdiff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual[syntax]>=6.6.0",
]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]

[project.scripts]
vdiff = "vdiff.vdiff:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vdiff = ["*.tcss"]
